New Home Page New Product Page New Settings Page New Menu Add category articles Delete articles in cart Better performance

--- a/PhoneGap/www/product-detail5.html
+++ b/PhoneGap/www/product-detail5.html
@@ -1,53 +1,53 @@
-<div data-page="product-detail" class="page">
+<div class="views">
+    <div class="view view-main">
 
-    <div class="views">
-        <div class="view view-main">
+        <div class="pages navbar-fixed">
+            <div data-page="product-detail" class="page">
 
-            <div class="pages navbar-fixed">
-                <div data-page="index" class="page">
-
-                    <div class="navbar">
-                        <div class="navbar-inner">
-                            <div class="left"><a href="#" class="link icon-only back"><i class="material-icons">arrow_back</i></a></div>
-                            <div class="center">Product detail</div>
-                            <div class="right"><a href="cart.html" class="link icon-only"><i class="material-icons">shopping_cart</i></a></div>
-                        </div>
+                <div class="navbar">
+                    <div class="navbar-inner">
+                        <div class="left"><a href="#" class="link icon-only back"><i class="material-icons">arrow_back</i></a></div>
+                        <div class="center">Product detail</div>
+                        <div class="right"><a href="cart.html" class="link icon-only"><i class="material-icons">shopping_cart</i></a></div>
                     </div>
+                </div>
 
-                    <div class="page-content">
+                <div class="page-content">
 
-                        <div class="card ks-card-header-pic">
-                            <div style="background-image:url(img/product5.jpg);width: 45%;margin: 0 auto;" valign="bottom" class="card-header color-white no-border"></div>
-                            <div class="card-footer">
-                                <div class="product-name">Product Name</div>
-                                <div class="product-price">1 490€</div>
-                            </div>
-                            <div class="card-footer">
-                                <div class="product-color">Color</div>
-                                <div class="color">
-                                    <div class="color-grey"></div>
-                                    <div class="color-gold"></div>
-                                    <div class="color-sideral"></div>
+                    <img class="product-header" src="img/product5.jpg" />
+                    <div class="content-block">
+                        <a href="#" class="button button-raised larger">+ Add</a>
+                    </div>
+                    <div class="list-block">
+                        <ul>
+                            <li class="item-content">
+                                <div class="item-inner">
+                                    <div class="item-title product">Product name</div>
+                                    <div class="item-after product">1490€</div>
                                 </div>
-                            </div>
-                            <div class="card-footer">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida, enim ac fermentum tristique, augue nulla tristique magna, in pellentesque quam urna at ex. Nam lobortis arcu id efficitur maximus. Nullam nec pulvinar libero, scelerisque aliquet ex. Aenean vitae pellentesque orci, non porttitor purus. Cras vel fermentum arcu. Praesent sit amet erat ut tellus accumsan eleifend.</p>
-                            </div>
-                            <div class="card-footer">
-                                <a href="#" class="button button-raised larger">+ Add</a>
-                            </div>
-                            <div class="card-footer">
-                                <a href="#" class="link icon-only"><i class="material-icons product-detail">favorite</i></a>
-                                <a href="#" class="link icon-only"><i class="material-icons product-detail">chat</i></a>
-                                <a href="#" class="link icon-only"><i class="material-icons product-detail">share</i></a>
-                            </div>
-                        </div>
-                        
+                            </li>
+                            <li class="item-content">
+                                <div class="item-inner">
+                                    <div class="item-title product">Color</div>
+                                    <div class="item-after product">
+                                        <div class="color">
+                                            <div class="color-grey"></div>
+                                            <div class="color-gold"></div>
+                                            <div class="color-sideral"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="content-block">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida, enim ac fermentum tristique, augue nulla tristique magna, in pellentesque quam urna at ex. Nam lobortis arcu id efficitur maximus. Nullam nec pulvinar libero, scelerisque aliquet ex. Aenean vitae pellentesque orci, non porttitor purus. Cras vel fermentum arcu. Praesent sit amet erat ut tellus accumsan eleifend.</p>
                     </div>
 
                 </div>
-            </div>
 
+            </div>
         </div>
+
     </div>
 </div>
