--- a/PhoneGap/www/term.html
+++ b/PhoneGap/www/term.html
@@ -1,33 +1,25 @@
-<div data-page="terms" class="page">
+<div class="views">
+    <div class="view view-main">
 
-    <div class="views">
-        <div class="view view-main">
+        <div class="pages navbar-fixed">
+            <div data-page="term" class="page">
 
-            <div class="pages navbar-fixed">
-                <div data-page="index" class="page">
-
-                    <div class="navbar">
-                        <div class="navbar-inner">
-                            <div class="left"><a href="#" class="link icon-only back"><i class="material-icons">arrow_back</i></a></div>
-                            <div class="center">Terms & conditions</div>
-                        </div>
+                <div class="navbar">
+                    <div class="navbar-inner">
+                        <div class="left"><a href="#" class="link icon-only back"><i class="material-icons">arrow_back</i></a></div>
+                        <div class="center">Terms & conditions</div>
                     </div>
+                </div>
 
-                    <div class="page-content">
+                <div class="page-content">
 
-                        <div class="card">
-                            <div class="card-content">
-                                <div class="card-content-inner">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras magna eros, commodo vel condimentum sagittis, vehicula in quam. Suspendisse et orci id sapien ultricies tincidunt dictum vel nisi. Aliquam congue auctor nibh at tristique. Vestibulum auctor, enim aliquam eleifend cursus, felis nulla faucibus odio, id blandit lectus diam vitae quam. Curabitur vestibulum luctus ipsum in convallis. Etiam posuere iaculis elit. Phasellus at massa vitae orci ultrices faucibus. Sed ornare nulla dui, in vehicula nulla ullamcorper non. Vestibulum quis gravida ligula.</p>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="content-block">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras magna eros, commodo vel condimentum sagittis, vehicula in quam. Suspendisse et orci id sapien ultricies tincidunt dictum vel nisi. Aliquam congue auctor nibh at tristique. Vestibulum auctor, enim aliquam eleifend cursus, felis nulla faucibus odio, id blandit lectus diam vitae quam. Curabitur vestibulum luctus ipsum in convallis. Etiam posuere iaculis elit. Phasellus at massa vitae orci ultrices faucibus. Sed ornare nulla dui, in vehicula nulla ullamcorper non. Vestibulum quis gravida ligula.</p>
                     </div>
-
+                    
                 </div>
 
             </div>
         </div>
-
     </div>
 </div>
