--- a/cart.html
+++ b/cart.html
@@ -1,62 +1,74 @@
-    <div class="views">
-        <div class="view view-main">
+<div class="views">
+    <div class="view view-main">
 
-            <div class="pages navbar-fixed">
-                <div data-page="cart" class="page">
+        <div class="pages navbar-fixed">
+            <div data-page="cart" class="page">
 
-                    <div class="navbar">
-                        <div class="navbar-inner">
-                            <div class="left"><a href="#" class="link icon-only back"><i class="material-icons">arrow_back</i></a></div>
-                            <div class="center">Cart</div>
-                        </div>
+                <div class="navbar">
+                    <div class="navbar-inner">
+                        <div class="left"><a href="#" class="open-panel link icon-only"><i class="material-icons">menu</i></a></div>
+                        <div class="center">Cart</div>
+                    </div>
+                </div>
+
+                <div class="page-content">
+                    <div class="list-block">
+                        <ul>
+                            <li class="swipeout product1">
+                                <div class="card ks-card-header-pic">
+                                    <div style="background-image:url(img/product.jpg);width: 70%;margin: 0 auto;" valign="bottom" class="card-header color-white no-border"></div>
+                                    <div class="card-footer">
+                                        <div class="product-name">Product Name</div>
+                                    </div>
+                                    <div class="card-footer">
+                                        <div class="product-price">1 230€</div>
+                                        <div class="delete"><a href="#" class="link icon-only"><i class="material-icons product-detail">delete</i></a></div>
+                                    </div>
+                                </div>
+                            </li>
+
+                            <li class="swipeout product2">
+                                <div class="card ks-card-header-pic">
+                                    <div style="background-image:url(img/product2.jpg);width: 70%;margin: 0 auto;" valign="bottom" class="card-header color-white no-border"></div>
+                                    <div class="card-footer">
+                                        <div class="product-name">Product Name</div>
+                                    </div>
+                                    <div class="card-footer">
+                                        <div class="product-price">490€</div>
+                                        <div class="delete2"><a href="#" class="link icon-only"><i class="material-icons product-detail">delete</i></a></div>
+                                    </div>
+                                </div>
+                            </li>
+
+                            <li class="swipeout product3">
+                                <div class="card ks-card-header-pic">
+                                    <div style="background-image:url(img/product4.jpg);width: 70%;margin: 0 auto;" valign="bottom" class="card-header color-white no-border"></div>
+                                    <div class="card-footer">
+                                        <div class="product-name">Product Name</div>
+                                    </div>
+                                    <div class="card-footer">
+                                        <div class="product-price">760€</div>
+                                        <div class="delete3"><a href="#" class="link icon-only"><i class="material-icons product-detail">delete</i></a></div>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
 
-                    <div class="page-content">
-
-                        <div class="card ks-card-header-pic">
-                            <div style="background-image:url(img/product.jpg);width: 70%;margin: 0 auto;" valign="bottom" class="card-header color-white no-border"></div>
-                            <div class="card-footer">
-                                <div class="product-name">Product Name</div>
-                            </div>
-                            <div class="card-footer">
-                                <div class="product-price">1 230€</div><a href="#" class="link icon-only"><i class="material-icons product-detail">delete</i></a>
-                            </div>
+                    <div class="card ks-card-header-pic">
+                        <div class="card-footer">
+                            <div class="product-total">Total:</div>
+                            <div class="product-price total">2 480€</div>
                         </div>
-
-                        <div class="card ks-card-header-pic">
-                            <div style="background-image:url(img/product2.jpg);width: 70%;margin: 0 auto;" valign="bottom" class="card-header color-white no-border"></div>
-                            <div class="card-footer">
-                                <div class="product-name">Product Name</div>
-                            </div>
-                            <div class="card-footer">
-                                <div class="product-price">490€</div><a href="#" class="link icon-only"><i class="material-icons product-detail">delete</i></a>
-                            </div>
+                        <div class="card-footer">
+                            <a href="#" class="button button-raised larger">Order now</a>
                         </div>
-
-                        <div class="card ks-card-header-pic">
-                            <div style="background-image:url(img/product4.jpg);width: 70%;margin: 0 auto;" valign="bottom" class="card-header color-white no-border"></div>
-                            <div class="card-footer">
-                                <div class="product-name">Product Name</div>
-                            </div>
-                            <div class="card-footer">
-                                <div class="product-price">760€</div><a href="#" class="link icon-only"><i class="material-icons product-detail">delete</i></a>
-                            </div>
-                        </div>
-
-                        <div class="card ks-card-header-pic">
-                            <div class="card-footer">
-                                <div class="product-total">Total:</div>
-                                <div class="product-price total">2 480€</div>
-                            </div>
-                            <div class="card-footer">
-                                <a href="#" class="button button-raised larger">Order now</a>
-                            </div>
-                        </div>
-
                     </div>
 
                 </div>
-            </div>
 
+            </div>
         </div>
+
     </div>
+</div>
