--- a/index.html
+++ b/index.html
@@ -71,59 +71,49 @@
                             <div class="right"><a href="cart.html" class="link icon-only"><i class="material-icons">shopping_cart</i></a></div>
                         </div>
                     </div>
-                    <div class="page-content">
+                    <div class="page-content home">
 
                         <div class="card ks-card-header-pic">
-                            <a href="product-detail.html" style="background-image:url(img/product.jpg);width: 70%;margin: 0 auto;" valign="bottom" class="card-header color-white no-border"></a>
-                            <div class="card-footer">
-                                <div class="product-name">Product Name</div>
-                            </div>
-                            <div class="card-footer">
-                                <div class="product-price">1 230€</div><a href="#" class="button button-raised">+ Add</a>
-                            </div>
+                            <a href="category.html" style="background-image:url(img/technology.jpg);width:100%;margin: 0 auto;" valign="bottom" class="card-header color-white no-border">
+                                <div class="opacity-container">
+                                    <div class="category-title">Technology</div>
+                                </div>
+                            </a>
                         </div>
 
                         <div class="card ks-card-header-pic">
-                            <a href="product-detail2.html" style="background-image:url(img/product2.jpg);width: 70%;margin: 0 auto;" valign="bottom" class="card-header color-white no-border"></a>
-                            <div class="card-footer">
-                                <div class="product-name">Product Name</div>
-                            </div>
-                            <div class="card-footer">
-                                <div class="product-price">490€</div><a href="#" class="button button-raised">+ Add</a>
-                            </div>
+                            <a href="category.html" style="background-image:url(img/food.jpg);width:100%;margin: 0 auto;" valign="bottom" class="card-header color-white no-border">
+                                <div class="opacity-container">
+                                    <div class="category-title">Food</div>
+                                </div>
+                            </a>
                         </div>
 
                         <div class="card ks-card-header-pic">
-                            <a href="product-detail3.html" style="background-image:url(img/product3.jpg);width: 50%;margin: 0 auto;" valign="bottom" class="card-header color-white no-border"></a>
-                            <div class="card-footer">
-                                <div class="product-name">Product Name</div>
-                            </div>
-                            <div class="card-footer">
-                                <div class="product-price">660€</div><a href="#" class="button button-raised">+ Add</a>
-                            </div>
+                                <a href="category.html" style="background-image:url(img/sport.jpg);width:100%;margin: 0 auto;" valign="bottom" class="card-header color-white no-border">
+                                    <div class="opacity-container">
+                                        <div class="category-title">Sport</div>
+                                    </div>
+                                </a>
                         </div>
 
                         <div class="card ks-card-header-pic">
-                            <a href="product-detail4.html" style="background-image:url(img/product4.jpg);width: 70%;margin: 0 auto;" valign="bottom" class="card-header color-white no-border"></a>
-                            <div class="card-footer">
-                                <div class="product-name">Product Name</div>
-                            </div>
-                            <div class="card-footer">
-                                <div class="product-price">760€</div><a href="#" class="button button-raised">+ Add</a>
-                            </div>
+                            <a href="category.html" style="background-image:url(img/auto.jpeg);width:100%;margin: 0 auto;" valign="bottom" class="card-header color-white no-border">
+                                <div class="opacity-container">
+                                    <div class="category-title">Automobile</div>
+                                </div>
+                            </a>
                         </div>
 
                         <div class="card ks-card-header-pic">
-                            <a href="product-detail5.html" style="background-image:url(img/product5.jpg);width: 45%;margin: 0 auto;" valign="bottom" class="card-header color-white no-border"></a>
-                            <div class="card-footer">
-                                <div class="product-name">Product Name</div>
-                            </div>
-                            <div class="card-footer">
-                                <div class="product-price">1 490€</div><a href="#" class="button button-raised">+ Add</a>
-                            </div>
+                            <a href="category.html" style="background-image:url(img/mode.jpg);width:100%;margin: 0 auto;" valign="bottom" class="card-header color-white no-border">
+                                <div class="opacity-container">
+                                    <div class="category-title">Mode</div>
+                                </div>
+                            </a>
                         </div>
-
                     </div>
+                    
                 </div>
             </div>
         </div>
