--- a/term.html
+++ b/term.html
@@ -13,18 +13,13 @@
 
                 <div class="page-content">
 
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-content-inner">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras magna eros, commodo vel condimentum sagittis, vehicula in quam. Suspendisse et orci id sapien ultricies tincidunt dictum vel nisi. Aliquam congue auctor nibh at tristique. Vestibulum auctor, enim aliquam eleifend cursus, felis nulla faucibus odio, id blandit lectus diam vitae quam. Curabitur vestibulum luctus ipsum in convallis. Etiam posuere iaculis elit. Phasellus at massa vitae orci ultrices faucibus. Sed ornare nulla dui, in vehicula nulla ullamcorper non. Vestibulum quis gravida ligula.</p>
-                            </div>
-                        </div>
+                    <div class="content-block">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras magna eros, commodo vel condimentum sagittis, vehicula in quam. Suspendisse et orci id sapien ultricies tincidunt dictum vel nisi. Aliquam congue auctor nibh at tristique. Vestibulum auctor, enim aliquam eleifend cursus, felis nulla faucibus odio, id blandit lectus diam vitae quam. Curabitur vestibulum luctus ipsum in convallis. Etiam posuere iaculis elit. Phasellus at massa vitae orci ultrices faucibus. Sed ornare nulla dui, in vehicula nulla ullamcorper non. Vestibulum quis gravida ligula.</p>
                     </div>
+                    
                 </div>
 
             </div>
-
         </div>
     </div>
-
 </div>
