--- a/product-detail4.html
+++ b/product-detail4.html
@@ -14,31 +14,34 @@
 
                 <div class="page-content">
 
-                    <div class="card ks-card-header-pic">
-                        <div style="background-image:url(img/product4.jpg);width: 70%;margin: 0 auto;" valign="bottom" class="card-header color-white no-border"></div>
-                        <div class="card-footer">
-                            <div class="product-name">Product Name</div>
-                            <div class="product-price">760€</div>
-                        </div>
-                        <div class="card-footer">
-                            <div class="product-color">Color</div>
-                            <div class="color">
-                                <div class="color-grey"></div>
-                                <div class="color-gold"></div>
-                                <div class="color-sideral"></div>
-                            </div>
-                        </div>
-                        <div class="card-footer">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida, enim ac fermentum tristique, augue nulla tristique magna, in pellentesque quam urna at ex. Nam lobortis arcu id efficitur maximus. Nullam nec pulvinar libero, scelerisque aliquet ex. Aenean vitae pellentesque orci, non porttitor purus. Cras vel fermentum arcu. Praesent sit amet erat ut tellus accumsan eleifend.</p>
-                        </div>
-                        <div class="card-footer">
-                            <a href="#" class="button button-raised larger">+ Add</a>
-                        </div>
-                        <div class="card-footer">
-                            <a href="#" class="link icon-only"><i class="material-icons product-detail">favorite</i></a>
-                            <a href="#" class="link icon-only"><i class="material-icons product-detail">chat</i></a>
-                            <a href="#" class="link icon-only"><i class="material-icons product-detail">share</i></a>
-                        </div>
+                    <img class="product-header" src="img/product4.jpg" />
+                    <div class="content-block">
+                        <a href="#" class="button button-raised larger">+ Add</a>
+                    </div>
+                    <div class="list-block">
+                        <ul>
+                            <li class="item-content">
+                                <div class="item-inner">
+                                    <div class="item-title product">Product name</div>
+                                    <div class="item-after product">760€</div>
+                                </div>
+                            </li>
+                            <li class="item-content">
+                                <div class="item-inner">
+                                    <div class="item-title product">Color</div>
+                                    <div class="item-after product">
+                                        <div class="color">
+                                            <div class="color-grey"></div>
+                                            <div class="color-gold"></div>
+                                            <div class="color-sideral"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="content-block">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida, enim ac fermentum tristique, augue nulla tristique magna, in pellentesque quam urna at ex. Nam lobortis arcu id efficitur maximus. Nullam nec pulvinar libero, scelerisque aliquet ex. Aenean vitae pellentesque orci, non porttitor purus. Cras vel fermentum arcu. Praesent sit amet erat ut tellus accumsan eleifend.</p>
                     </div>
 
                 </div>
