--- a/PhoneGap/www/index.html
+++ b/PhoneGap/www/index.html
@@ -121,6 +121,12 @@
 
     <script type="text/javascript" src="js/framework7.js"></script>
     <script type="text/javascript" src="js/my-app.js"></script>
+    <!-- PhoneGap -->
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript">
+        app.initialize();
+    </script>
 </body>
 
 </html>
